old/overlays/prod/apps/node-red/old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: webhook
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "simplefxn-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: "/webhook"
spec:
  tls:
  - hosts:
    - webhook.simplefxn.com
    secretName: webhook-simplefxn-tls
  rules:
  - host: webhook.simplefxn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red
            port:
              number: 1880
